# C-CPP-course

./: .gitignore  .travis.yml  README.md
pt_1/: .gitignore  .travis.yml  CMakeLists.txt  in_out_ticket.c  in_out_ticket.h  input.c  input.h  main.c  makefile  test.c  test.txt  ticket.c  ticket.h
pt_2/: CMakeLists.txt  file_top.c  file_top.h  input.c  input.h  main.c  metrics.c  metrics.h  test.c  trie.c  trie.h  trie_parallel.c
